--- a/.env
+++ b/.env
@@ -1,12 +1,13 @@
 # Database Setup
 DB_NAME=pixmi
-DB_USER=root
-DB_PASSWORD=
-DB_HOST=127.0.0.1
+DB_USER=zpay
+DB_PASSWORD=Aben2000
+DB_HOST=localhost
 DB_DIALECT=mysql
 
 #App Setup
-RUN_PORT=3002
+RUN_PORT=8080
+ENABLE_TUNNEL=true
 
 #zsequelize
 TIMESTAMPS=true
