--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "audit": "0.0.6",
     "axios": "^0.19.0",
+    "ba64": "^3.0.9",
+    "base-64": "^0.1.0",
     "cors": "^2.8.5",
     "dot": "^1.1.2",
     "dotenv": "^8.0.0",
